--- a/lista_de_filmes/pubspec.yaml
+++ b/lista_de_filmes/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get_it: ^8.0.3
   dio: ^5.8.0+1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
